--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<div class="rectangle-right">
 					<h1 class="hithere">Hi there 👋</h1>
 					<p class="nometa">Write directly to the point. 📝</p>
-					<p class="email">My email: <a href="mailto://contact@zenettany.life" class="email2">stas.repida@gmail.com</a> 📩</p>
+					<p class="email">My email: <a href="mailto://stas.repida@gmail.com" class="email2">stas.repida@gmail.com</a> 📩</p>
 					<video autoplay loop muted class="ayanami">
 						<source src="media/ayanami.mp4" type="video/mp4">
 					</video>
