--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				</div>
 				<div class="spotifyplayer">
 					<a href="https://open.spotify.com/playlist/1oMjtgFPJCTJj4uQo0fv1P?si=7e973f1b798f4a25" class="spotifynow">
-					  <img src="https://spotify-djvu8182e-qqqqeow.vercel.app/api?theme=dark&scan=true&rainbow=true" alt="Current Spotify Song">
+					  <img src="https://spotify-djvu8182e-qqqqeow.vercel.app/api" alt="Current Spotify Song">
 					</a>
 				</div>
 			</div>
