--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<div class="rectangle">
 					<div class="content">
 						<a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley' target='_blank'>
-							<img class='avatar' src="https://i.pinimg.com/originals/d9/98/c8/d998c820d40bf7294ad398428c364321.gif" alt='Avatar'>
+							<img class='avatar' src="https://avatars.githubusercontent.com/u/130841117?v=4" alt='Avatar'>
 						</a>
 						<h1 class="nickname">qqqqeow</h1>
 						<img src='icons/Discord.svg' class='discord'>
