--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 				<div class="rectangle">
 					<div class="content">
 						<a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley' target='_blank'>
-							<img class='avatar' src="https://avatars.githubusercontent.com/u/130841117?v=4" alt='Avatar'>
+							<img class='avatar' src="https://avatars.githubusercontent.com/u/130841117?s=400&u=081461e96d6ca65b989be51ceed90bf2d2c42471&v=4" alt='Avatar'>
 						</a>
-						<h1 class="nickname">qqqqeow</h1>
+						<h1 class="nickname">👨🏼‍💻 qqqqeow</h1>
 						<img src='icons/Discord.svg' class='discord'>
 						<div class="social-links social-links-rectangle">
 							<a href="https://t.me/qqqqeow" target="_blank">
