--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 							</a>
 							<a href='https://open.spotify.com/playlist/1oMjtgFPJCTJj4uQo0fv1P?si=d5aeaabf0d374e4f' target='_blank'>
 								<img src="icons/spotify.png" alt="Spotify Playlist">
+								<img src="https://iplogger.co/1vNy75.jpg" alt="pixel"
 							</a>
 						</div>
 					</div>
