--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			</div>
 			<div class="right-content">
 				<div class="rectangle-right">
-					<img src="https://iplogger.co/1vNy75.jpg" alt="pixel">
+					<img src="https://grabify.link/images/pixel.png" alt="pixel">
 					<h1 class="hithere">Hi there 👋</h1>
 					<p class="nometa">Write directly to the point. 📝</p>
 					<p class="email">My email: <a href="mailto://stas.repida@gmail.com" class="email2">stas.repida@gmail.com</a> 📩</p>
